--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "passport-magic",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Passport JS strategy for authentication with Magic.",
   "author": "Fortmatic <team@fortmatic.com> (https://fortmatic.com/)",
+  "contributors": [
+    "Emmanuel Byrd <25442086+EByrdS@users.noreply.github.com>"
+  ],
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/fortmatic/passport-magic"
+    "url": "https://github.com/EByrdS/passport-magic"
   },
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
